Fix font spacing and margins in main body

--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
 }
 
 main {
-  margin: 1.5rem;
+  margin: 1rem;
 }
 
 img {
@@ -31,7 +31,7 @@ h1 {
 h2 {
   font-family: "Denk One", sans-serif;
   color: #623b0c;
-  margin: 0 0 1.5rem;
+  margin: 0 0 1.7rem;
 }
 
 a {
